# example-package-scamp

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_rescale.py
